# GDAS

./: CMakeLists.txt
.github/workflows/: build.yml
mod/: CMakeLists.txt  main.cpp  mod.json
mod/src/: AutoSave.cpp  AutoSave.hpp  SettingsLayer.cpp
src/: SettingsLayer.hpp
